fixed theme bugs / override dark mode

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -24,6 +24,7 @@ hr {
 }
 
 table {
+  color: var(--global-text-color) !important;
   td,
   th {
     font-size: 1rem;
@@ -50,6 +51,7 @@ table.table a {
 
 .table-dark {
   background-color: transparent;
+  color: var(--global-text-color) !important;
   &.table-bordered {
     border: 1px solid var(--global-divider-color) !important;
   }
